OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Fri Jan 28 16:44:58 2022
	+ Update `.gitignore`

OpenVi 7.0.6 -> OpenVi 7.0.7: Fri Jan 28 16:33:22 2022
	+ Important fix to `GNUmakefile` for linking with Clang's `lld` linker
	+ Remove installed man pages as part of the `uninstall` target
	+ Workaround to accommodate the case of `make clean all -j N' when `N` > 1
	+ Clean-up whitespace and line lengths of sources and `GNUmakefile`

OpenVi 7.0.5 -> OpenVi 7.0.6: Thu Jan 27 16:45:12 2022
	+ Important fix for back-end database file locking; also, switch
	  back to using the system libc-provided mkstemp functions to elide
	  some issues that would otherwise occur on networked filesystems.
	+ Add proper attribution for DragonflyBSD Project to `LICENSE` text
	+ Correct `GNUmakefile` non-verbose messages for the `install` target
	+ Clean-up excess and trailing whitespace in source files

OpenVi 7.0.4 -> OpenVi 7.0.5: Thu Jan 27 11:00:46 2022
	+ No verbose build by default; set variables V (or DEBUG) to enable
	+ No LTO and LGC by default; set variables LTO and/or LGC to enable
	+ Don't attempt linking with libjemalloc or libmtmalloc by default
	+ Clean-up headers to speed compilation time and decrease binary size
	+ Import and adapt OpenBSD Berkeley DB from OpenBSD 7-current libc
	+ Remove the unused "maintainer-clean" target from GNUmakefile
	+ Build against the newly bundled OpenBSD Berkeley DB by default;
	  the imperfect Berkeley DB 3/4/5 support will remain available

OpenVi 7.0.3 -> OpenVi 7.0.4: Wed Jan 26 13:09:45 2022
	+ New feature: "set visibletab" (abbrev "set vt") which toggles
	  displaying tabs visibly while editing, useful for Makefiles, etc
	+ Decrease the width of the line-number column by one row
	+ Increase the length of the divider decoration string (by 2x)
	+ Improve the GNUmakefile to avoid remaking any non-stale targets
	+ Portably seed the standard random number generator

OpenVi 7.0.2 -> OpenVi 7.0.3: Wed Jan 26 08:31:28 2022