@@ -8,7 +8,7 @@ Copyright (c) 1994, 1996 Rob Mayoff
 Copyright (c) 1997, 1998, 2002, 2004, 2015
         Todd C. Miller <Todd.Miller@courtesan.com>
 Copyright (c) 1999, 2000 Sven Verdoolaege
-Copyright (c) 2000 The NetBSD Foundation, Inc.
+Copyright (c) 2000, 2020 The NetBSD Foundation, Inc.
 Copyright (c) 2002 Niels Provos <provos@citi.umich.edu>
 Copyright (c) 2004 Ted Unangst
 Copyright (c) 2012, 2013 Christian Neukirchen <chneukirchen@gmail.com>
