@@ -1,4 +1,5 @@
-OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Fri Jan 28 16:44:58 2022
+OpenVi 7.0.7 -> OpenVi 7.0.8-dev (Unreleased): Fri Jan 28 17:03:29 2022
+	+ Avoid undefined behavior in *BIT macros; from NetBSD
 	+ Update `.gitignore`
 
 OpenVi 7.0.6 -> OpenVi 7.0.7: Fri Jan 28 16:33:22 2022
